--- a/a4/assets/css/style.css
+++ b/a4/assets/css/style.css
@@ -113,6 +113,7 @@ img {
 	text-decoration: none;
 	text-transform: uppercase;
 		margin-right: 20px;
+    margin-left: 20px;
 		margin-bottom: 10px;
 
 	background-color: rgb(3, 103, 25);
